@@ -4,6 +4,9 @@ Changes in current version:
  o provide event_base_new() that does not set the current_base global	
  o bufferevent_write now uses a const source argument; report from Charles Kerr
  o better documentation for event_base_loopexit; from Scott Lamb.
+ o Make kqueue have the same behavior as other backends when a signal is caught between event_add() and event_loop().  Previously, it would catch and ignore such signals.
+ o Make kqueue restore signal handlers correctly when event_del() is called.
+
 
 Changes in 1.4.0-beta:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
